--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,17 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile files('libs/gson-2.3.1.jar')
+
+    compile 'com.google.code.gson:gson:2.8.2' // time out
+//    compile files('libs/gson-2.8.0.jar')
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0' // time out
+//    compile files('libs/converter-gson-2.3.0.jar')
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
 }
 repositories {
     mavenCentral()
+    maven { url 'https://maven.google.com' }
     jcenter()
 }
