--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 //    compile files('libs/converter-gson-2.3.0.jar')
     compile 'com.github.bumptech.glide:glide:4.2.0'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    compile "io.reactivex.rxjava2:rxjava:2.1.6"
+//    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0' // time out
+    compile files('libs/adapter-rxjava-2.3.0.jar')
 }
 repositories {
     mavenCentral()
