--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+}
+
+repositories {
+    mavenCentral()
+    maven { url 'https://maven.google.com' }
+    jcenter()
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
@@ -27,24 +37,26 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    compile 'com.google.code.gson:gson:2.8.2' // time out
-//    compile files('libs/gson-2.8.0.jar')
+    // time out
+    //    compile files('libs/gson-2.8.0.jar')
+    //    compile 'com.squareup.retrofit2:converter-gson:2.3.0' // time out
+    compile files('libs/converter-gson-2.3.0.jar')
+    //    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    //    compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0' // time out
+    compile files('libs/adapter-rxjava2-2.3.0.jar')
+    //    compile files('libs/adapter-rxjava-2.3.0.jar')
+    compile files('libs/adapter-rxjava2-2.3.0.jar')
+    //    compile(name: 'rxandroid-1.2.1', ext: 'aar')  // flatDir dirs 'libs'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0' // time out
-//    compile files('libs/converter-gson-2.3.0.jar')
     compile 'com.github.bumptech.glide:glide:4.2.0'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
-    compile "io.reactivex.rxjava2:rxjava:2.1.6"
-//    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0' // time out
-    compile files('libs/adapter-rxjava-2.3.0.jar')
+    compile 'io.reactivex.rxjava2:rxjava:2.1.6'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    testCompile 'junit:junit:4.12'
 }
-repositories {
-    mavenCentral()
-    maven { url 'https://maven.google.com' }
-    jcenter()
-}
+
